# Environs

./: Cargo.toml  aarch64-unknown-linux-cosmo.json  gcc-linker-wrapper.bash  x86_64-unknown-linux-cosmo.json
.cargo/: config.toml
src/: app.rs  app_state.rs  events.rs  main.rs
src/business_logic/: change_app_state.rs  filter_env_variable.rs  mod.rs  parse_env_variables.rs  sort_env_variables.rs
src/models/: env_value_tab.rs  env_values.rs  env_variables.rs  mod.rs  modification_types.rs
src/tui/: env_value_popup.rs  env_values.rs  env_variable.rs  env_variables_list.rs  environment_variable.rs  homepage.rs  mod.rs  ui.rs
src/utils/: centered_rect.rs  mod.rs  stateful_list.rs
