[package]
name = "environs"
description = "Manage your environment variables with simplicity"
authors = ["julien-cpsn"]
version = "0.1.0"
edition = "2021"
keywords = ["env", "environment", "TUI", "ratatui"]

[dependencies]
crokey = "1.0.1"
indexmap = { version = "2.2.6", features = ["rayon"] }
ratatui = { version = "0.27.0", features = ["crossterm"] }
rayon = "1.10.0"
strum = "0.26.3"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tui-big-text = "0.4.5"

# Is it utile?
num_cpus = "1.16.0"
signal-hook-registry = "1.4.2"
signal-hook-mio = { version = "0.2.3", features = ["mio-0_8"] }
mio = { version = "0.8.11", features = ["os-poll"] }

[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private = true