[package]
name = "environs"
description = "Manage your environment variables with simplicity"
authors = ["julien-cpsn"]
version = "0.1.0"
edition = "2021"
keywords = ["env", "environment", "TUI", "ratatui"]

[dependencies]
crokey = "1.0.1"
indexmap = { version = "2.2.6", features = ["rayon"] }
ratatui = { version = "0.27.0", features = ["crossterm"] }
rayon = "1.10.0"
strum = "0.26.3"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tui-big-text = "0.4.5"

# Is it utile?
libc = "0.2.155"
#backtrace = { version = "0.3.73", features = ["libunwind"] }

[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private = true